--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ https://templatemo.com/tm-552-video-catalog
             </div>
             <div class="tm-welcome-container text-center text-white">
                 <div class="tm-welcome-container-inner">
-                    <p class="tm-welcome-text mb-1 text-white">Video Catalog is brought to you by TemplateMo.</p>
+                    <p class="tm-welcome-text mb-1 text-white">Template Test Page</p>
                     <p class="tm-welcome-text mb-5 text-white">This is a full-width video banner.</p>
                     <a href="#content" class="btn tm-btn-animate tm-btn-cta tm-icon-down">
                         <span>Discover</span>
@@ -269,9 +269,7 @@ https://templatemo.com/tm-552-video-catalog
 
                 <footer class="row pt-5">
                     <div class="col-12">
-                        <p class="text-right">Copyright 2020 The Video Catalog Company 
-                        
-                        - Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
+                        <p class="text-right">Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
                     </div>
                 </footer>
             </div> <!-- tm-content-container -->
