--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ https://templatemo.com/tm-552-video-catalog
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
-                                <img src="img/tn-03.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <img src="https://lh3.googleusercontent.com/pw/AMWts8AJ476gUgr-vdPMuoD5DSUxTF6_KObWav6Qy2JCoH78T2zqnwngHigGWKDbE-xn5YRzd9UsSVIjCynlZiQrv9R11kaTNzf6jXtKd-7kAc_7MN27fzy1vlYrQxixL58Q7nvTiVtmas0FUNxHDj2e7m8=w1199-h903-no?authuser=0" alt="Image" class="img-fluid tm-catalog-item-img">    
                                 <a href="video-page.html" class="position-absolute tm-img-overlay">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
