--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ https://templatemo.com/tm-552-video-catalog
             <div id="tm-video-container">
                 <video autoplay muted loop id="tm-video">
                     <!-- <source src="video/sunset-timelapse-video.mp4" type="video/mp4"> -->
-                        <source src="https://f004.backblazeb2.com/file/liondance2023/353063844-1-30032.mp4" type="video/mp4">
+                        <source src="video/ld.mp4" type="video/mp4">
                 </video>    
             </div>
             
@@ -118,7 +118,7 @@ https://templatemo.com/tm-552-video-catalog
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
-                                <img src="https://f004.backblazeb2.com/file/liondance2023/md_HP_29012022.webp" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <img src="https://lh3.googleusercontent.com/pw/AMWts8B7zc2QT-gEU3nuJIsbhPItlnvPsLph3SueRa85GsK45IuKmcogQi7WhpF7DY08fqwo4BxUEi88Ansi_lRdmIQF0Sn6ffOI3yzmYpYXOWhbCCzsRQlMVVdMU3d4ZttrbN5o4PrqrqANMFJhBZSiwMU=w1245-h830-no?authuser=0" alt="Image" class="img-fluid tm-catalog-item-img">    
                             </div>
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
                                 <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Mauris in odio vel odio</h3>
