--- a/video-page.html
+++ b/video-page.html
@@ -46,10 +46,7 @@ https://templatemo.com/tm-552-video-catalog
                                                 <a class="nav-link tm-nav-link" href="index.html">Videos <span class="sr-only">(current)</span></a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link tm-nav-link" href="about.html">About</a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
+                                                <a class="nav-link tm-nav-link" href="photo.html">Photos</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -60,9 +57,6 @@ https://templatemo.com/tm-552-video-catalog
 				</div>
 			</div>
 			<div class="tm-welcome-container tm-fixed-header tm-fixed-header-1">
-				<div class="text-center">
-					<p class="pt-5 px-3 tm-welcome-text tm-welcome-text-2 mb-1 text-white mx-auto">Background image can be fixed. Content will simply slide over.</p>                	
-				</div>                
             </div>
 
 			<!-- Header image -->
@@ -81,158 +75,12 @@ https://templatemo.com/tm-552-video-catalog
 							Your browser does not support the video tag.
 							</video>
 						</div>
-					</div>
-					<div class="row mb-5 pb-5">
-						<div class="col-xl-8 col-lg-7">
-							<!-- Video description -->
-							<div class="tm-video-description-box">
-								<h2 class="mb-5 tm-video-title">Mauris dapibus urna nec ipsum posuere</h2>
-								<p class="mb-4">Cras dictum pretium est, et imperdiet ex. Fusce vitae vestibulum ipsum. Maecenas ultricies ipsum a urna ullamcorper, id interdum est blandit. Vivamus sit amet justo sed erat iaculis consequat. Nulla suscipit posuere lectus ut venenatis. Proin sed orci eget tellus euismod vulputate eu eu arcu.</p>
-								<p class="mb-4">Etiam a bibendum lorem. Curabitur ac bibendum odio. Vivamus euismod dui mauris, ut tincidunt mi congue quis. Phasellus luctus orci dolor, a luctus massa tincidunt vitae. Integer sit amet odio id libero tincidunt dignissim in eget arcu.</p>
-								<p class="mb-4">Aliquam tristique ut magna sit amet tincidunt. Sed tempor tellus nulla, molestie luctus lectus tincidunt id. Cras euismod leo a urna placerat, vel blandit turpis fermentum.</p>	
-							</div>							
-						</div>
-						<div class="col-xl-4 col-lg-5">
-							<!-- Share box -->
-							<div class="tm-bg-gray tm-share-box">
-								<h6 class="tm-share-box-title mb-4">Share this video</h6>
-								<div class="mb-5 d-flex">
-									<a href="" class="tm-bg-white tm-share-button"><i class="fab fa-facebook"></i></a>
-									<a href="" class="tm-bg-white tm-share-button"><i class="fab fa-twitter"></i></a>
-									<a href="" class="tm-bg-white tm-share-button"><i class="fab fa-pinterest"></i></a>
-									<a href="" class="tm-bg-white tm-share-button"><i class="far fa-envelope"></i></a>
-								</div>
-								<p class="mb-4">Author: <a href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
-								<a href="#" class="tm-bg-white px-5 mb-4 d-inline-block tm-text-primary tm-likes-box tm-liked">
-									<i class="fas fa-heart mr-3 tm-liked-icon"></i>
-									<i class="far fa-heart mr-3 tm-not-liked-icon"></i>
-									<span id="tm-likes-count">486 likes</span>
-								</a>
-								<div>
-									<button class="btn btn-primary p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Download Video</span></button>	
-								</div>								
-							</div>
-						</div>
-					</div>
-					<div class="row pt-4 pb-5">
-						<div class="col-12">
-							<h2 class="mb-5 tm-text-primary">Related Videos for You</h2>
-							<div class="row tm-catalog-item-list">
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-01.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>    
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Nam tincidunt consectetur</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-02.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Praesent posuere rhoncus</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-03.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>                            
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Turpis massa aliquam</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-04.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>    
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Nam tincidunt consectetur</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-05.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Praesent posuere rhoncus</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-06.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>                            
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Turpis massa aliquam</h3>		                                
-		                            </div>
-		                        </div>
-		                    </div>
-						</div>
-					</div>
 				</main>
-
-				<!-- Subscribe form and footer links -->
-                <div class="row mt-5 pt-3">
-                    <div class="col-xl-6 col-lg-12 mb-4">
-                        <div class="tm-bg-gray p-5 h-100">
-                            <h3 class="tm-text-primary mb-3">Do you want to get our latest updates?</h3>
-                            <p class="mb-5">Please subscribe our newsletter for upcoming new videos and latest information about our
-                                work. Thank you.</p>
-                            <form action="" method="GET" class="tm-subscribe-form">
-                                <input type="text" name="email" placeholder="Your Email..." required>
-                                <button type="submit" class="btn rounded-0 btn-primary tm-btn-small">Subscribe</button>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12 mb-4">
-                        <div class="p-5 tm-bg-gray">
-                            <h3 class="tm-text-primary mb-4">Quick Links</h3>
-                            <ul class="list-unstyled tm-footer-links">
-                                <li><a href="#">Duis bibendum</a></li>
-                                <li><a href="#">Purus non dignissim</a></li>
-                                <li><a href="#">Sapien metus gravida</a></li>
-                                <li><a href="#">Eget consequat</a></li>
-                                <li><a href="#">Praesent eu pulvinar</a></li>
-                            </ul>    
-                        </div>                        
-                    </div>
-                    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-12 mb-4">
-                        <div class="p-5 tm-bg-gray h-100">
-                            <h3 class="tm-text-primary mb-4">Our Pages</h3>
-                            <ul class="list-unstyled tm-footer-links">
-                                <li><a href="#">Our Videos</a></li>
-                                <li><a href="#">License Terms</a></li>
-                                <li><a href="#">About Us</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li><a href="#">Privacy Policies</a></li>
-                            </ul>
-                        </div>                        
-                    </div>
-                </div> <!-- row -->
 
                 <footer class="row pt-5">
                     <div class="col-12">
-                        <p class="text-right">Copyright 2020 The Video Catalog Company 
-                        
-                        - Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
+                        <p class="text-right"> 
+                        Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
                     </div>
                 </footer>
 			</div> <!-- .tm-content-container -->
