--- a/photo.html
+++ b/photo.html
@@ -74,10 +74,10 @@ https://templatemo.com/tm-552-video-catalog
 
                     <div class="gallery">
                         <div class="gallery__column">
-                            <a href="https://unsplash.com/@jeka_fe" target="_blank" class="gallery__link">
+                            <a href="https://unsplash.com/@jeka_fe" target="_blank" class="gallery__link" id="photo1">
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/_cvwXhGqG-o/300x300"
-                                        alt="Portrait by Jessica Felicio" class="gallery__image">
+                                        alt="Portrait by Jessica Felicio" class="gallery__image" id="photosrc1">
                                 </figure>
                             </a>
 
@@ -85,7 +85,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/AHBvAIVqk64/300x500"
                                         alt="Portrait by Oladimeji Odunsi" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Oladimeji Odunsi</figcaption>
                                 </figure>
                             </a>
 
@@ -93,7 +92,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/VLPLo-GtrIE/300x300"
                                         alt="Portrait by Alex Perez" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Alex Perez</figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -103,7 +101,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/AR7aumwKr2s/300x300"
                                         alt="Portrait by Noah Buscher" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Noah Buscher</figcaption>
                                 </figure>
                             </a>
 
@@ -111,7 +108,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/dnL6ZIpht2s/300x300"
                                         alt="Portrait by Ivana Cajina" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Ivana Cajina</figcaption>
                                 </figure>
                             </a>
 
@@ -119,7 +115,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/tV_1sC603zA/300x500"
                                         alt="Portrait by Sam Burriss" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Sam Burriss</figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -129,7 +124,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/Xm9-vA_bhm0/300x500"
                                         alt="Portrait by Mari Lezhava" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Mari Lezhava</figcaption>
                                 </figure>
                             </a>
 
@@ -137,7 +131,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/NTjSR3zYpsY/300x300"
                                         alt="Portrait by Ethan Haddox" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Ethan Haddox</figcaption>
                                 </figure>
                             </a>
 
@@ -145,7 +138,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/2JH8d3ChNec/300x300"
                                         alt="Portrait by Amir Geshani" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Amir Geshani</figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -155,7 +147,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/FQhLLehm4dk/300x300"
                                         alt="Portrait by Guilian Fremaux" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Guilian Fremaux</figcaption>
                                 </figure>
                             </a>
 
@@ -163,7 +154,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/OQd9zONSx7s/300x300"
                                         alt="Portrait by Jasmin Chew" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Jasmin Chew</figcaption>
                                 </figure>
                             </a>
 
@@ -171,7 +161,6 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="https://source.unsplash.com/XZkEhowjx8k/300x500"
                                         alt="Portrait by Dima DallAcqua" class="gallery__image">
-                                    <figcaption class="gallery__caption">Portrait by Dima DallAcqua</figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -179,12 +168,13 @@ https://templatemo.com/tm-552-video-catalog
                 </div>
 			</div>
 		</main>
+        
+        <button class="button-63" role="button">Load More!</button>
 
 		<div class="container-fluid tm-content-container mx-auto pt-5">
             <footer class="row pt-5">
                 <div class="col-12">
                     <p class="text-right">
-                        
                         Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
                 </div>
             </footer>
@@ -194,5 +184,21 @@ https://templatemo.com/tm-552-video-catalog
 	<script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/parallax.min.js"></script>
+    <script>
+        const photos = 
+        [
+            "https://lh3.googleusercontent.com/pw/AMWts8AKOiXD2J_vJhhzujsuRuJ-n5o8A7WjWfRAymUJCjhtF7aDpN0m1TLf4yeyicS3vA6j-x0a81CPCy2IvmTOkicb6skYdhvERzV1i2VYhfkgNeLSKZPeLf7UCC7ubEnMLC9jxWe3BLOX8ZOjppvNabw=w1000-h666-no?authuser=0",
+            "https://lh3.googleusercontent.com/pw/AMWts8D2g6yn4UXCuNcNGMNAKa0kgbbWaPtb4gHfdWvgD3ie7fOoRmZXp6Im1TEM-NNj0mhG7gJenrxExpswGpsI3o2bKGz1b2F5o0C3rMSC8BwnfqqaS4CjSIZOaavbjaNG8SdIWBaLcrMcvQEhmkSogXI=w1354-h903-no?authuser=0"
+        ];
+
+        window.onload = function selectPhoto()
+        {
+            const pic = document.getElementById('photo1');
+            const picsrc = document.getElementById('photosrc1');
+            console.log(picsrc.src);
+            pic.href = photos[0];
+            picsrc.src = photos[0];
+        }
+    </script>
 </body>
 </html>
