--- a/video-page.html
+++ b/video-page.html
@@ -23,12 +23,6 @@ https://templatemo.com/tm-552-video-catalog
 			<div class="potition-absolute tm-site-header">
 				<div class="container-fluid position-relative">
 					<div class="row">						
-                        <div class="col-7 col-md-4">
-                            <a href="index.html" class="tm-bg-black text-center tm-logo-container">
-                                <i class="fas fa-video tm-site-logo mb-3"></i>
-                                <h1 class="tm-site-name">Video Catalog</h1>
-                            </a>
-                        </div>
                         <div class="col-5 col-md-8 ml-auto mr-0">
                             <div class="tm-site-nav">
                                 <nav class="navbar navbar-expand-lg mr-0 ml-auto" id="tm-main-nav">
@@ -43,10 +37,10 @@ https://templatemo.com/tm-552-video-catalog
                                     <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                                         <ul class="navbar-nav text-uppercase">
                                             <li class="nav-item active">
-                                                <a class="nav-link tm-nav-link" href="index.html">Videos <span class="sr-only">(current)</span></a>
+                                                <a class="nav-link tm-nav-link" href="index.html" style="text-shadow: 2px 2px black;">Videos <span class="sr-only">(current)</span></a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link tm-nav-link" href="photo.html">Photos</a>
+                                                <a class="nav-link tm-nav-link" href="photo.html" style="text-shadow: 2px 2px black;">Photos</a>
                                             </li>
                                         </ul>
                                     </div>
