--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@ https://templatemo.com/tm-552-video-catalog
             <div class="position-absolute tm-site-header">
                 <div class="container-fluid position-relative">
                     <div class="row">
-                        <div class="col-7 col-md-4">
-                            <a href="index.html" class="tm-bg-black text-center tm-logo-container">
-                                <i class="fas fa-video tm-site-logo mb-3"></i>
-                                <h1 class="tm-site-name">Video Catalog</h1>
-                            </a>
-                        </div>
                         <div class="col-5 col-md-8 ml-auto mr-0">
                             <div class="tm-site-nav">
                                 <nav class="navbar navbar-expand-lg mr-0 ml-auto" id="tm-main-nav">
@@ -45,10 +39,10 @@ https://templatemo.com/tm-552-video-catalog
                                     <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
                                         <ul class="navbar-nav text-uppercase">
                                             <li class="nav-item active">
-                                                <a class="nav-link tm-nav-link" href="#">Videos <span class="sr-only">(current)</span></a>
+                                                <a class="nav-link tm-nav-link" href="#" style="text-shadow: 2px 2px black;">Videos <span class="sr-only">(current)</span></a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link tm-nav-link" href="photo.html">Photos</a>
+                                                <a class="nav-link tm-nav-link" href="photo.html" style="text-shadow: 2px 2px black;">Photos</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -60,10 +54,10 @@ https://templatemo.com/tm-552-video-catalog
             </div>
             <div class="tm-welcome-container text-center text-white">
                 <div class="tm-welcome-container-inner">
-                    <p class="tm-welcome-text mb-1 text-white">Template Test Page</p>
-                    <p class="tm-welcome-text mb-5 text-white">This is a full-width video banner.</p>
-                    <a href="#content" class="btn tm-btn-animate tm-btn-cta tm-icon-down">
-                        <span>Discover</span>
+                    <p class="tm-welcome-text mb-1 text-white" style="font-size: 40pt; text-shadow: 1px 1px gold;">Chinese New Year Celebration 2023</p>
+                    <p class="tm-welcome-text mb-5 text-white"></p>
+                    <a href="#content" class="btn tm-btn-animate tm-btn-cta tm-icon-down" style="color:lightgoldenrodyellow; font-weight: bolder;">
+                        <span>Discover!</span>
                     </a>
                 </div>
             </div>
@@ -71,7 +65,7 @@ https://templatemo.com/tm-552-video-catalog
             <div id="tm-video-container">
                 <video autoplay muted loop id="tm-video">
                     <!-- <source src="video/sunset-timelapse-video.mp4" type="video/mp4"> -->
-                        <source src="video/ld.mp4" type="video/mp4">
+                        <source src="video/fastcutLowQ.mp4" type="video/mp4">
                 </video>    
             </div>
             
