--- a/index.html
+++ b/index.html
@@ -78,14 +78,13 @@ https://templatemo.com/tm-552-video-catalog
                     <div class="row tm-catalog-item-list">
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
-                                <img src="img/tn-04.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <img src="img/LionDancePrep.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
                                 <a href="video-page.html" class="position-absolute tm-img-overlay">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>    
                             <div class="p-4 tm-bg-gray tm-catalog-item-description">
-                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Video Coming Soon</h3>
-                                <p class="tm-catalog-item-text">Check out the Photos!</p>
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Lion Dance Preparation</h3>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
