--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Catalog</title>
+    <title>CNY 2023 - Main Page</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!-- https://fonts.google.com/ -->
@@ -79,7 +79,7 @@ https://templatemo.com/tm-552-video-catalog
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
                                 <img src="img/LionDancePrep.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-                                <a href="video-page.html" class="position-absolute tm-img-overlay">
+                                <a href="video-page.html" class="position-absolute tm-img-overlay" target="_blank">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>    
@@ -153,7 +153,7 @@ https://templatemo.com/tm-552-video-catalog
 
                 <footer class="row pt-5">
                     <div class="col-12">
-                        <p class="text-right">Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
+                        <p class="text-right"> © 2023 Celestica Inc. </p>
                     </div>
                 </footer>
             </div> <!-- tm-content-container -->
