--- a/video-page.html
+++ b/video-page.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Catalog</title>
+    <title>CNY 2023 - Video</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!-- https://fonts.google.com/ -->
@@ -70,8 +70,7 @@ https://templatemo.com/tm-552-video-catalog
 		
 				<footer class="row pt-5">
 					<div class="col-12">
-						<p class="text-right">
-							Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
+                        <p class="text-right"> © 2023 Celestica Inc. </p>
 					</div>
 				</footer>
 			</div> <!-- .tm-content-container -->
