--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Catalog</title>
+    <title>CNY 2023 - Photos</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <!-- https://fonts.google.com/ -->
@@ -168,8 +168,7 @@ https://templatemo.com/tm-552-video-catalog
 		<div class="container-fluid tm-content-container mx-auto pt-5">
             <footer class="row pt-5">
                 <div class="col-12">
-                    <p class="text-right">
-                        Designed by <a href="https://templatemo.com" rel="nofollow" target="_parent">TemplateMo</a></p>
+                    <p class="text-right"> © 2023 Celestica Inc. </p>
                 </div>
             </footer>
 		</div>		
