add more photo rows

--- a/photo.html
+++ b/photo.html
@@ -88,6 +88,13 @@ https://templatemo.com/tm-552-video-catalog
                                         alt="photo" class="gallery__image" id="photosrc3">
                                 </figure>
                             </a>
+
+                            <a href="img/loading.jpg" target="_blank" class="gallery__link" id="photo13">
+                                <figure class="gallery__thumb">
+                                    <img src="img/loading.jpg"
+                                        alt="photo" class="gallery__image" id="photosrc13">
+                                </figure>
+                            </a>
                         </div>
 
                         <div class="gallery__column">
@@ -109,6 +116,13 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="img/loading.jpg"
                                         alt="photo" class="gallery__image" id="photosrc6">
+                                </figure>
+                            </a>
+
+                            <a href="img/loading.jpg" target="_blank" class="gallery__link" id="photo14">
+                                <figure class="gallery__thumb">
+                                    <img src="img/loading.jpg"
+                                        alt="photo" class="gallery__image" id="photosrc14">
                                 </figure>
                             </a>
                         </div>
@@ -134,6 +148,13 @@ https://templatemo.com/tm-552-video-catalog
                                         alt="photo" class="gallery__image" id="photosrc9">
                                 </figure>
                             </a>
+
+                            <a href="img/loading.jpg" target="_blank" class="gallery__link" id="photo15">
+                                <figure class="gallery__thumb">
+                                    <img src="img/loading.jpg"
+                                        alt="photo" class="gallery__image" id="photosrc15">
+                                </figure>
+                            </a>
                         </div>
 
                         <div class="gallery__column">
@@ -155,6 +176,13 @@ https://templatemo.com/tm-552-video-catalog
                                 <figure class="gallery__thumb">
                                     <img src="img/loading.jpg"
                                         alt="photo" class="gallery__image" id="photosrc12">
+                                </figure>
+                            </a>
+
+                            <a href="img/loading.jpg" target="_blank" class="gallery__link" id="photo16">
+                                <figure class="gallery__thumb">
+                                    <img src="img/loading.jpg"
+                                        alt="photo" class="gallery__image" id="photosrc16">
                                 </figure>
                             </a>
                         </div>
@@ -248,7 +276,7 @@ $(this).scrollTop(450);
                 "https://lh3.googleusercontent.com/pw/AMWts8AUxqiUSDbZqqPFI6MUWPtPxXVaeWISRKNSufNLuguvGDzMKKrv066d6jIF9KH8pUu8vnbXW7idmuQcyaKQObkVibEs1Tkdrxdv3TlnUbPQ3qWuX9xAhke-L0Bmk3xjjwOkKrNQuxUPAezlrhDSJi4=w1477-h830-no?authuser=0",
             ];
 
-            for (let i = 0; i < 12; i++)
+            for (let i = 0; i < 16; i++)
             {
                 var a = Math.floor(Math.random() * photos.length);
                 const pic = document.getElementById('photo' + (i+1).toString());
