--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ https://templatemo.com/tm-552-video-catalog
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
                                 <img src="img/LD.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-                                <a href="video-page.html" class="position-absolute tm-img-overlay" target="_blank">
+                                <a href="video-page-1.html" class="position-absolute tm-img-overlay" target="_blank">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>    
@@ -101,7 +101,7 @@ https://templatemo.com/tm-552-video-catalog
                         <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
                             <div class="position-relative tm-thumbnail-container">
                                 <img src="img/LOHEI.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-                                <a href="video-page.html" class="position-absolute tm-img-overlay" target="_blank">
+                                <a href="video-page-2.html" class="position-absolute tm-img-overlay" target="_blank">
                                     <i class="fas fa-play tm-overlay-icon"></i>
                                 </a>
                             </div>    
